# wiretun

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml  release.yml
examples/: README.md
examples/stub/: Cargo.toml
examples/stub/src/: main.rs
examples/wg-cli/: Cargo.toml
examples/wg-cli/src/: main.rs
integration-tests/: .gitignore  justfile
integration-tests/native-tun/: .gitignore  Cargo.toml  pre-test.sh  run-test.sh
integration-tests/suites/native-tun/: .gitignore  Cargo.toml
integration-tests/suites/native-tun/src/: main.rs
integration-tests/suites/wireguard-to-wiretun/: .gitignore  run-test.sh
integration-tests/suites/wireguard-to-wiretun/tester/: Cargo.toml
integration-tests/suites/wireguard-to-wiretun/tester/src/: main.rs
integration-tests/suites/wiretun-to-wiretun/: README.md  pre-test.sh  run-test.sh
integration-tests/suites/wiretun-to-wiretun/tester/: Cargo.toml
integration-tests/suites/wiretun-to-wiretun/tester/src/: main.rs
integration-tests/support/wiretun-cli/: Cargo.toml
integration-tests/support/wiretun-cli/src/: main.rs  packet.rs
integration-tests/wireguard-to-wiretun/: pre-test.sh  run-test.sh
integration-tests/wireguard-to-wiretun/peer2/: Cargo.toml
integration-tests/wireguard-to-wiretun/peer2/src/: main.rs  packet.rs
integration-tests/wireguard-to-wiretun/tester/src/: main.rs
integration-tests/wiretun-to-wiretun/: .gitignore  README.md  pre-test.sh  run-test.sh
integration-tests/wiretun-to-wiretun/peer1/: Cargo.toml
integration-tests/wiretun-to-wiretun/peer1/src/: main.rs
integration-tests/wiretun-to-wiretun/peer2/src/: main.rs
integration-tests/wiretun-to-wiretun/tester/: Cargo.toml
integration-tests/wiretun-to-wiretun/tester/src/: main.rs
src/: config.rs  device.rs  lib.rs  tun.rs  tun_darwin.rs
src/conn/: mod.rs
src/device/: config.rs  device.rs  error.rs  handle.rs  handshake.rs  inbound.rs  metrics.rs  mod.rs  outbound.rs  peer.rs  rate_limiter.rs  time.rs
src/device/peer/: cidr.rs  handle.rs  handshake.rs  index.rs  jitter.rs  mod.rs  monitor.rs  peer.rs  peers.rs  session.rs
src/listener/: mod.rs
src/noise/: crypto.rs  error.rs  mod.rs  packet.rs  protocol.rs  session.rs  timestamp.rs
src/noise/handshake/: cookie.rs  handshake.rs  initiation.rs  mod.rs  response.rs
src/time/: mod.rs
src/timer/: mod.rs
src/tun/: error.rs  memory.rs  mod.rs
src/tun/linux/: mod.rs  sys.rs  tun.rs
src/tun/macos/: mod.rs  sys.rs  tun.rs
src/uapi/: connection.rs  error.rs  listener.rs  mod.rs  protocol.rs
tests/: handshake.rs  support.rs
