[package]
name = "wiretun"
description = "WireGuard Library"
version = "0.0.0"
authors = ["lodrem <jialun.cai@pm.me>"]
keywords = ["wireguard"]
repository = "https://github.com/lodrem/wiretun"
homepage = "https://github.com/lodrem/wiretun"
documentation = "https://docs.rs/wiretun"
license = "Apache-2.0"
edition = "2021"

[features]
default = ["tun-native", "uapi"]
tun-native = []
tun-memory = []
uapi = []

[dependencies]
libc = "0.2"
bytes = "1.4"
regex = "1"
chrono = { version = "0.4" }
rand_core = "0.6"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
futures = "0.3"
async-trait = "0.1"
tokio = { version = "1.26", features = ["full"] }
toml = "0.7"
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2.0.0-pre.1", features = ["reusable_secrets"] }
blake2 = "0.10"
hmac = "0.12"
