[package]
name = "wiretun"
description = "WireGuard Library"
version = "0.5.0"
authors = ["zarvd <jialun.cai@pm.me>"]
keywords = ["wireguard", "networking"]
repository = "https://github.com/zarvd/wiretun"
homepage = "https://github.com/zarvd/wiretun"
documentation = "https://docs.rs/wiretun"
license = "Apache-2.0"
edition = "2021"

[features]
default = ["native"]
native = []
uapi = []

[dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["fs", "ioctl", "socket"] }
socket2 = "0.5"
bytes = "1.6"
regex = "1.10"
rand_core = "0.6"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
futures = "0.3"
async-trait = "0.1"
tokio = { version = "1.37", features = ["full"] }
tokio-util = "0.7"
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2.0", features = ["reusable_secrets", "static_secrets"] }
blake2 = "0.10"
hmac = "0.12"
ip_network = "0.4"
ip_network_table = "0.2"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
