[package]
name = "wiretun-cli"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
wiretun = { path = "../../../", features = ["uapi"] }
clap = { version = "4.5", features = ["derive"] }
async-trait = "0.1"
tokio = { version = "1.37", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
base64 = "0.22"
pnet = "0.34"
