[package]
name = "wiretun-peer1"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
wiretun = { path = "../../../", features = ["uapi"] }
tokio = { version = "1.27", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
base64 = "0.21"
