[package]
name = "wiretun-to-wiretun-tester"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.27", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
rand_core = { version = "0.6", features = ["getrandom"] }
